# NWayBlender-Standalone

./: .polyscope.ini  BUILD_AND_TEST.md  CMakeLists.txt  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  imgui.ini
src/app/: Application.cpp  Application.h  main.cpp
src/blender/: NWayBlender.cpp  NWayBlender.h  WeightController.cpp  WeightController.h
src/core/: affinelib.h  affinelib.h.bak  blendAff.h  laplacian.h  tetrise.h  tetrise.h.bak
src/mesh/: Mesh.cpp  Mesh.h  MeshUtils.cpp  MeshUtils.h
src/ui/: UIManager.cpp  UIManager.h
test_meshes/: convert_to_triangles.py
